<resources>
    <string name="app_name">Pinjamin</string>
    <string name="description">Deskripsi</string>
    <string name="overview">Overview</string>
    <string name="name">Nama</string>
    <string name="empty">-</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="hp">HP</string>
    <string name="verification">Verifikasi</string>
    <string name="call_now_description">Call now</string>
    <string name="emai_now_description">Email now</string>
    <string name="partner">Penyewa</string>
    <string name="order">Order</string>
    <string name="poster_description">Poster</string>
    <string name="backdrop_overlay_description">Backdrop overlay</string>
    <string name="backdrop_descroption">Backdrop</string>
    <string name="add_pinjaman">Add Pinjaman</string>
    <string name="title">Judul</string>
    <string name="pinjaman_image_description">Pinjaman image</string>
    <string name="create_pinjaman_tos">* Barang pinjaman hanya akan ditampilkan untuk akun yang sudah terverifikasi  ** Barang yang dipinjam merupakan tanggung jawab pemilik dan peminjam</string>
    <string name="save">Simpan</string>
    <string name="edit_pinjaman">Edit Pinjaman</string>
    <string name="delete">Delete</string>
    <string name="no_hp">No HP</string>
    <string name="order_pinjaman">Order Pinjaman</string>
    <string name="message_hint">Pesan (Ex: Pinjam yang hijau)</string>
    <string name="order_tos">* Barang yang dipinjam merupakan tanggung jawab peminjam dan pemilik</string>
    <string name="order_detail">Order Detail</string>
    <string name="qr_code_image_description">QR Code</string>
    <string name="pemilik">Pemilik</string>
    <string name="message">Message</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="used">Used</string>
    <string name="my_point">Poinku</string>
    <string name="min_point">* Minimum redeem point 250</string>
    <string name="redeem">Redeem</string>
    <string name="operator">Operator</string>
    <string name="pulsa">Pulsa</string>
    <string name="welcome">Selamat Datang</string>
    <string name="please_signin_or_register">Silahkan masuk atau mendaftar</string>
    <string name="have_account">Saya sudah punya akun</string>
    <string name="register">Mendaftar dengan email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="login_to_your_account">Masuk ke Akun anda</string>
    <string name="password_repeat">Password Repeat</string>
    <string name="sign_up">Sign Up</string>
    <string name="verification_status">Status Verifikasi</string>
    <string name="not_verified">Belum Terverifikasi</string>
    <string name="ktp">KTP</string>
    <string name="change">Ubah</string>
    <string name="ktm">KTM (Khusus Mahasiswa)</string>
    <string name="ktp_image_description">KTP Image</string>
    <string name="ktm_image_description">KTM image description</string>
    <string name="send_verification">Kirim Permintaan Verifikasi</string>
    <string name="insert_new_name">Masukkan nama baru</string>
    <string name="close_button">close</string>
    <string name="search_hint">Sewa motor, sewa helm …</string>
    <string name="search_icon_description">Search Icon</string>
    <string name="orders">Orders</string>
    <string name="more">More</string>
    <string name="refresh_button_description">Refresh Button</string>
    <string name="no_orders">Belum ada order !</string>
    <string name="next_button">Next button</string>
    <string name="sewa_description">Sewa Description</string>
</resources>
