<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/coordinator"
    android:background="@color/colorWhite">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:id="@+id/appBar"
        android:theme="@style/AppTheme.AppBarOverlayBlack"
        app:elevation="0dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="center"
            app:expandedTitleMarginBottom="16dp"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@style/CollapsingTextAppearance.TitleSize"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:id="@+id/backdrop"
                android:contentDescription="@string/backdrop_descroption" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:src="@drawable/gradient_black_trans"
                android:id="@+id/overlay"
                android:contentDescription="@string/backdrop_overlay_description" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:behavior_overlapTop="69dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.v7.widget.CardView
                android:id="@+id/people_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:contentPaddingBottom="16dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                app:contentPaddingTop="16dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >


                    <ImageView
                        android:layout_width="match_parent"
                        android:id="@+id/poster"
                        android:layout_height="150dp"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/poster_description" />
                    <TextView
                        android:layout_marginTop="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:fontFamily="@font/lato"
                        android:textSize="25sp"/>
                    <TextView
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/lato_light"
                        android:text="@string/overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/overview" />
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:contentPaddingBottom="16dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                app:contentPaddingTop="16dp">
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="80dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="180dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/lato"
                                android:text="@string/name" />

                            <TextView
                                android:id="@+id/penyewa"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/lato_light"
                                android:text="@string/empty" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="80dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/username_label"
                                android:layout_width="180dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/lato"
                                android:text="@string/username" />

                            <TextView
                                android:id="@+id/username_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/lato_light"
                                android:text="@string/empty" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="80dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="180dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/lato"
                                android:text="@string/email" />

                            <TextView
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/lato_light"
                                android:text="@string/empty" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="180dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/lato"
                                android:text="@string/hp" />

                            <TextView
                                android:id="@+id/hp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/lato_light"
                                android:text="@string/empty" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="180dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/lato"
                                android:text="@string/verification" />

                            <TextView
                                android:id="@+id/verified"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/lato_light"
                                android:text="@string/empty" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/call_now"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginEnd="8dp"
                                android:layout_weight="1"
                                android:background="@drawable/btn_primary_transparent"
                                android:padding="10dp"
                                app:srcCompat="@drawable/ic_phone_black_24dp"
                                android:contentDescription="@string/call_now_description" />

                            <ImageView
                                android:id="@+id/email_now"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginStart="8dp"
                                android:layout_weight="1"
                                android:background="@drawable/btn_primary_transparent"
                                android:padding="10dp"
                                app:srcCompat="@drawable/ic_email_black_24dp"
                                android:contentDescription="@string/emai_now_description" />
                        </LinearLayout>
                    </LinearLayout>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/avatar_image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        app:elevation="8dp"
                        app:civ_border_width="2dp"
                        app:civ_border_color="@color/colorTextGrey"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/partner"
                        android:fontFamily="@font/lato"
                        android:textSize="25sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/order_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:contentPaddingBottom="16dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                app:contentPaddingTop="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/order_button"
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:background="@drawable/btn_primary"
                        android:textColor="@color/colorWhite"
                        android:layout_height="match_parent"
                        android:text="@string/order"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>